# benchmark_learning_efficiency

./: .gitignore  Dockerfile  README.md  experiment_results.dvc  pyproject.toml  run_experiments.sh
.dvc/: config
experiments/: helpers.py  result.py
experiments/basic_language/: binarized_question_answering.py  harder_question_answering.py  question_answering.py  question_answering_masked.py  question_answering_masked_r3.py  question_answering_masked_r4.py
experiments/datasets/: imdb.py
experiments/genetic/: simple_ga.py
experiments/hybrids/: periodic_increase_hyb_rfc.py  symbol_ct_hard_hyb_rfc.py
experiments/increasing_period/: increasing_period.py  increasing_period_one2many.py  increasing_period_one2pattern.py  increasing_period_r3.py  increasing_period_r4.py
experiments/langugage_world/: adjective_language.py  adjective_language_counting.py  elementary_with_world_def.py  elementary_with_world_def_counting.py
experiments/periodic/: periodic.py  periodic_one2many.py  periodic_one2pat.py  periodic_r3.py  periodic_r4.py
experiments/symbol_counting/: hard_symbol_counting.py  hard_symbol_counting_rbf.py  hard_symbol_counting_rbf_masked.py  hard_symbol_counting_rbf_masked_one2many.py  hard_symbol_counting_rbf_masked_one2many_r3.py  hard_symbol_counting_rbf_masked_one2pat.py  hard_symbol_counting_rbf_masked_one2pat_r3.py  hard_symbol_counting_rbf_masked_r3.py  hard_symbol_counting_rbf_masked_r4.py  symbol_counting.py  symbol_counting_harder.py  symbol_counting_mlp.py  symbol_counting_mlp_masked.py  symbol_counting_mlp_masked_r3.py  symbol_counting_mlp_masked_r4.py  symbol_counting_rbf.py  symbol_counting_rbf_masked.py  symbol_counting_rbf_masked_one2many.py  symbol_counting_rbf_masked_one2many_r3.py  symbol_counting_rbf_masked_one2pat.py  symbol_counting_rbf_masked_one2pat_r3.py  symbol_counting_rbf_masked_r3.py  symbol_counting_rbf_masked_r4.py
notebooks/: gpu_exps.ipynb  plot_sgd_results.ipynb
reservoir_ca/: ca_res.py  decoders.py  esn_res.py  experiment.py  preprocessors.py  reservoir.py  rnn_experiment.py  sequential_task.py  standard_recurrent.py  tasks.py  transformer_experiment.py
reservoir_ca/datasets/: imdb.py
reservoir_ca/evo/: es.py
reservoir_ca/incremental_tasks/: __init__.py  language.py  periodic.py  symbolic.py  tasks.py
reservoir_ca/reservoir/: __init__.py  base.py  ca_res.py  esn_res.py
reservoir_ca/supervised_wade_exps/: dataset.py  main.py  model.py
utils/: exp_utils.py  rename_data_files.py
