[tool.poetry]
name = "reservoir_ca"
version = "0.1.0"
description = ""
authors = ["hugcis <hmj.cisneros@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
sklearn = "^0.0"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
jupyterlab = "^3.2.2"
dvc = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
