[tool.poetry]
name = "reservoir_ca"
version = "0.1.0"
description = ""
authors = ["hugcis <hmj.cisneros@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
sklearn = "^0.0"
torch = "^1.10.0"
incremental_tasks = {path = "../incremental_tasks", develop = true}
torchtext = "^0.12.0"
torchdata = "^0.3.0"
tokenizers = "^0.12.1"
jupyterlab-code-formatter = "^1.4.11"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
jupyterlab = "^3.2.2"
dvc = "^2.9.2"
joblib = "^1.1.0"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["reservoir_ca"]
exclude = ["**/__pycache__"]
venv = ".venv"

[mypy-sklearn]
ignore_missing_imports = true
